--- a/ChangeLog
+++ b/ChangeLog
@@ -78,6 +78,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przy okazji drobna przeróbka UserListElement (adrian)
 * podczas przebudowy zak³adek z grupami kadu stara siê
   pamiêtaæ aktualnie wybran± przez u¿ytkownika grupê (adrian)
+* poprawka: Kadu nie powinno klonowaæ kontaktów (mast3r)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
