Sms:initModule() i Chat::initModule()
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1144 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,11 @@ lub rozbudowy. Postaæ (x/y) oznacza, ¿e x jest pomys³odawc± lub
 podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
++++ wersja 0.3.4-rc2
+* porzadki: kod rejestrujacy opcje modulow Chat i Sms w oknie konfiguracji
+  przeniesiony do Chat::initModule() i Sms:initModule(). W ten sposob
+  w przyszlosci beda sie rejestrowac wszystkie moduly Kadu (adrian)
+
 +++ wersja 0.3.4-rc1
 * wiêkszo¶æ kodu dotycz±cego obs³ugi zdarzeñ sieciowych przeniesiona z
   kadu.cpp/h do klasy EventManager. Tam nast±pi jego dalsze porz±dkowanie
