poprawka do zapamietywania ustawien proxy
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1155 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   (ludwik/chilek)
 * modyfikacja formatu wy¶wietlania daty zdarzeñ; teraz dodatkowo przy otrzymanych
   wiadomo¶ciach mamy pe³n± datê nadania wiadomo¶ci (chilek)
+* informacje o proxy nie powinny ju¿ znikaæ po ponownej aktywacji (lol/mast3r)
 
 +++ wersja 0.3.4-rc1
 * wiêkszo¶æ kodu dotycz±cego obs³ugi zdarzeñ sieciowych przeniesiona z
