--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * modyfikacja formatu wy¶wietlania daty zdarzeñ; teraz dodatkowo przy otrzymanych
   wiadomo¶ciach mamy pe³n± datê nadania wiadomo¶ci (chilek)
 * informacje o proxy nie powinny ju¿ znikaæ po ponownej aktywacji (lol/mast3r)
+* porz±dki w kodzie, zoptymalizowano commandParser (mast3r)
+* poprawka z zwalnianiem pamieci w chat.cpp (nazgul/mast3r)
 
 +++ wersja 0.3.4-rc1
 * wiêkszo¶æ kodu dotycz±cego obs³ugi zdarzeñ sieciowych przeniesiona z
