wiadomosci o klasie != niz chat lub msg sa ignorowane
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1171 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -23,7 +23,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   bo to ponad 100KB, a nikt nie bêdzie i tak tego czyta³ (adrian)
 * configure: libgadu nie obs³uguje ju¿ --disable-debug. Po konsultacji
   z Wojtkiem rozwi±za³em w inny sposób wy³±czanie debugów libgadu (adrian)
+* poprawka z zwalnianiem pamiêci w history.cpp powinno byæ delete [](mast3r)
+* "³apanie" w link te¿ znaku ';' (mast3r)
 * w oknie informacji o u¿ytkowniku dodane pole z numerem wersji GG (chilek)
+* wiadomo¶ci których klasa jest inna ni¿ msg lub chat póki co, s± ignorwane (mast3r)
 
 +++ wersja 0.3.4-rc1
 * wiêkszo¶æ kodu dotycz±cego obs³ugi zdarzeñ sieciowych przeniesiona z
