usuniecie KDEDIR i przeniesienie miejsce instalacji ikonek kadu i kadu.desktop
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1178 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka zapamiêtywania i wczytywania polo¿enia Kadu(przy pierwszym uruchomieniu
   Kadu troszke sie przesunie) (ReGIs/mast3r)
 * mo¿liwo¶æ po³±czeñ szyfrowanych TLSv1 zgodnych z GG 5.7 beta (chilek)
+* Makefile.am i Makefile.in, ikonki instaluj± sie do /usr/share/pixmaps/ ,a
+  kadu.desktop do /usr/share/applnk/Internet (mast3r)
 
 +++ wersja 0.3.4-rc1
 * wiêkszo¶æ kodu dotycz±cego obs³ugi zdarzeñ sieciowych przeniesiona z
