--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * je¶li u¿ywamy po³±czenia TLSv1 i wpisujemy jawnie serwery GG to domy¶lnym
   portem jest 443 (chilek)
 * "wyifdefowanie" connecta b_usetls w oknie konfiguracyjnym (chilek)
+* dodanie pola email do struktury UserListElement (chilek)
+* w pliku "userlist": u¿ytkownicy nie posiadaj±cy numerów GG zapisywani
+  s± z pustym polem odpowiadaj±cym numerowi; zapisywanie pola email (chilek)
 
 +++ wersja 0.3.4-rc2
 * porzadki: kod rejestrujacy opcje modulow Chat i Sms w oknie konfiguracji
