--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodanie pola email do struktury UserListElement (chilek)
 * w pliku "userlist": u¿ytkownicy nie posiadaj±cy numerów GG zapisywani
   s± z pustym polem odpowiadaj±cym numerowi; zapisywanie pola email (chilek)
+* je¿eli nie mamy praw zapisu z usera który wykonuje make install do katalogu
+  /usr/share to ikonki i link kadu nie bêd± instalowane (mast3r)
 
 +++ wersja 0.3.4-rc2
 * porzadki: kod rejestrujacy opcje modulow Chat i Sms w oknie konfiguracji
