--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * je¿eli nie mamy praw zapisu z usera który wykonuje make install do katalogu
   /usr/share to ikonki i link kadu nie bêd± instalowane (mast3r)
 * eksport/import kontaktów dostosowany do standardu GG (chilek)
+* w oknie informacji o u¿ytkowniku mo¿liwo¶æ edycji emaila (chilek)
 
 +++ wersja 0.3.4-rc2
 * porzadki: kod rejestrujacy opcje modulow Chat i Sms w oknie konfiguracji
