dodanie lapania w url dwoch znakow i ctrl+klik na kopercie powoduje ukyrwanie/chowanie okna kadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1195 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przydzielaj±c usera do niej) (mast3r)
 * lewy klik na tray'u gdy jest koperta powoduje odebranie wiadomo¶ci, za¶
   gdy koperty nie ma pokazywanie/ukrywanie okna g³ównego (mast3r)
+* dodanie do detekcji adresów url ³apania w url znaków '!' i ',' (uto/mast3r)
+* CTRL + lewy klik na tray'u gdy jest wiadomo¶æ spowoduje pokazanie/ukrycie
+  okna g³ównego (mast3r)
 
 +++ wersja 0.3.4-rc2
 * porzadki: kod rejestrujacy opcje modulow Chat i Sms w oknie konfiguracji
