zmiany w polu grupy podczas dodawania usera i zmiany danych
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1200 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przeci±gaj±c usera na grupe Wszyscy nie dodajemy go do grupy Wszyscy
   tylko do grupy "" (to prawie to samo bo i tak userzy znajda sie
   w grupie Wszyscy) (uto/mast3r)
+* zmiany w polu wyboru grupy w oknie dodawania nowego u¿ytkownika i w oknie
+  zmiany danych o u¿ytkowniku - bardziej intelegetne (mast3r)
 
 +++ wersja 0.3.4-rc2
 * porzadki: kod rejestrujacy opcje modulow Chat i Sms w oknie konfiguracji
