--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zmiany w polu wyboru grupy w oknie dodawania nowego u¿ytkownika i w oknie
   zmiany danych o u¿ytkowniku - bardziej intelegetne (mast3r)
 * pasek narzêdziowy zajmuje ca³± szeroko¶æ okna kadu (towtys/chilek)
+* okno informacji o u¿ytkowniku: pole grupy ma t± sam± szeroko¶æ co inne pola
+  (chilek)
 
 +++ wersja 0.3.4-rc2
 * porzadki: kod rejestrujacy opcje modulow Chat i Sms w oknie konfiguracji
