--- a/ChangeLog
+++ b/ChangeLog
@@ -37,6 +37,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * pasek narzêdziowy zajmuje ca³± szeroko¶æ okna kadu (towtys/chilek)
 * okno informacji o u¿ytkowniku: pole grupy ma t± sam± szeroko¶æ co inne pola
   (chilek)
+* obs³uga drag&drop kilku u¿ytkowników równocze¶nie (adrian)
 
 +++ wersja 0.3.4-rc2
 * porzadki: kod rejestrujacy opcje modulow Chat i Sms w oknie konfiguracji
