plik VERSION i obsluga
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1210 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * okno informacji o u¿ytkowniku: pole grupy ma t± sam± szeroko¶æ co inne pola
   (chilek)
 * obs³uga drag&drop kilku u¿ytkowników równocze¶nie (adrian)
+* plik VERSION i jego obs³uga w configure (adrian)
 
 +++ wersja 0.3.4-rc2
 * porzadki: kod rejestrujacy opcje modulow Chat i Sms w oknie konfiguracji
