wersja paczki kadu pobierana jest z pliku VERSION
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1211 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 kadu (0.3.4-cvs-0) unstable; urgency=low
 
   * Pierwsza wersja plikow
+  * 04.07.2003 - Wersja paczki kadu jest pobierana z pliku VERSION
 
  -- Dariusz Jagodzik <mast3r@kadu.net>  Tue, 25 Feb 2003 10:06:51 +0100
