--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kadu (0.3.4-cvs-0) unstable; urgency=low
+kadu (<wersja>) unstable; urgency=low
 
   * Pierwsza wersja plikow
   * 04.07.2003 - Wersja paczki kadu jest pobierana z pliku VERSION
