--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   (chilek)
 * obs³uga drag&drop kilku u¿ytkowników równocze¶nie (adrian)
 * plik VERSION i jego obs³uga w configure (adrian)
+* poprawka delete na delete[] w chat.cpp (mast3r)
 
 +++ wersja 0.3.4-rc2
 * porzadki: kod rejestrujacy opcje modulow Chat i Sms w oknie konfiguracji
