Monisia wysyla wiadomosci klasy "0", a my jestesmy na to odporni
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1218 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
 +++ wersja 0.3.4-final
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
+* Monisia wysy³a wiadomo¶ci klasy "0", a my jeste¶my na to odporni (chilek)
 
 +++ wersja 0.3.4-rc3
 * je¶li u¿ywamy po³±czenia TLSv1 i wpisujemy jawnie serwery GG to domy¶lnym
