--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * Monisia wysy³a wiadomo¶ci klasy "0", a my jeste¶my na to odporni (chilek)
 * optymalizacja w funkcji Chat::convertCharacters (Vogel/mast3r)
 * optymalizacja w misc.cpp (Zenobiusz/mast3r)
+* pola których w oknie informacji o u¿ytkowniku nie mo¿emy zmieni
+  s± teraz (disabled) (mast3r)
 
 +++ wersja 0.3.4-rc3
 * je¶li u¿ywamy po³±czenia TLSv1 i wpisujemy jawnie serwery GG to domy¶lnym
