delete usuwa kontakt
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1223 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * optymalizacja w misc.cpp (Zenobiusz/mast3r)
 * pola których w oknie informacji o u¿ytkowniku nie mo¿emy zmieni
   s± teraz (disabled) (mast3r)
+* klawisz delete usuwa kontakt z listy (pawel_p/adrian)
 
 +++ wersja 0.3.4-rc3
 * je¶li u¿ywamy po³±czenia TLSv1 i wpisujemy jawnie serwery GG to domy¶lnym
