nowa bramka idei
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1230 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * pamiêtanie czterech ostatnich opisów (pawel_p/adrian)
 * poprawka okna chat - QT 3.2 (pawel_p/adrian)
 * klawisz insert w userbox'ie pokazuje info o kontakcie (pawel_p/adrian)
+* obs³uga nowej braki Idei (adrian)
 
 +++ wersja 0.3.4-rc3
 * je¶li u¿ywamy po³±czenia TLSv1 i wpisujemy jawnie serwery GG to domy¶lnym
