definiowalne skroty klawiszowe
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1232 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka okna chat - QT 3.2 (pawel_p/adrian)
 * klawisz insert w userbox'ie pokazuje info o kontakcie (pawel_p/adrian)
 * obs³uga nowej bramki Idei (adrian)
+* mechanizm definiowania skrótów klawiszowych w oknie konfiguracji
+  oraz obs³uga tego mechanizmu dla okien z rozmow± (pawel_p/adrian)
 
 +++ wersja 0.3.4-rc3
 * je¶li u¿ywamy po³±czenia TLSv1 i wpisujemy jawnie serwery GG to domy¶lnym
