--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * obs³uga nowej bramki Idei (adrian)
 * mechanizm definiowania skrótów klawiszowych w oknie konfiguracji
   oraz obs³uga tego mechanizmu dla okien z rozmow± (pawel_p/adrian)
+* wydzielenie reszty ikonek do plików png (pawel_p/adrian)
+* ikonka wy³±czenia d¼wiêków na toolbarze (pawel_p/adrian)
 
 +++ wersja 0.3.4-rc3
 * je¶li u¿ywamy po³±czenia TLSv1 i wpisujemy jawnie serwery GG to domy¶lnym
